[project]
name = "spring2025-lectures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "markdownify>=1.2.2",
    "numpy>=1.24.4",
    "openai>=2.2.0",
    "regex>=2024.11.6",
    "requests>=2.32.4",
    "sqlitedict>=2.1.0",
    "tiktoken>=0.7.0",
    "torch>=2.5.1",
    "warcio>=1.7.5",
]
